Fix spacing on About section

--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -10,7 +10,7 @@
   align-items: center;
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
 #about .definition {
